common/promethus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: promethus-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: alert.shaoyou.store
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: alertmanager-main
                port:
                  number: 9093
    - host: pro.shaoyou.store
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus-k8s
                port:
                  number: 9090
    - host: grafana.shaoyou.store
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana
                port:
                  number: 3000
